# up-webhook-ingester

./: .envrc  .eslintrc.js  .gitignore  Cargo.toml  README.md  deploy.sh  package-lock.json  package.json  serverless.yml  shell.nix  tsconfig.json
src/: index.ts  main.rs  transaction.rs  up-api.d.ts  user.rs  webhook.rs
src/upbank/: index.d.ts  transaction.d.ts  webhook.d.ts
