[package]
name = "up-webhook-ingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
hex = "0.4.3"
hmac = "0.12.1"
lambda_http = { version = "0.7.0", default-features = false, features = ["apigw_http"] }
reqwest = { version = "0.11.12", default-features = false, features=["rustls-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
serenity = "0.11.5"
sha2 = "0.10.6"
tokio = "1.21.2"
